objects/ChannelProgramLevel.object
<CustomObject>
    <fields>
        <fullName>Benefits__c</fullName>
        <label>Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <defaultValue>&quot;https://placeholdit.imgix.net/~text?txtsize=28&amp;txt=300%C3%97300&amp;w=300&amp;h=300&quot;</defaultValue>
        <label>Icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Minimum_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Level_Point_Requirement__c</fullName>
        <formula>Next_Level__r.Minimum_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Level Point Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Level</label>
        <referenceTo>ChannelProgramLevel</referenceTo>
        <relationshipLabel>Channel Program Levels</relationshipLabel>
        <relationshipName>Channel_Program_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>